--- a/collect_app/src/main/res/layouts/fieldsight/layout/row_sync_all.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/row_sync_all.xml
@@ -35,12 +35,12 @@
                     android:layout_height="wrap_content"
                     android:text="STFC - NUWAKOT"
                     android:textColor="#212121"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:gravity="center_vertical"
-                    android:minHeight="48dp"
+                    android:minHeight="24dp"
                     android:layout_height="wrap_content">
 
                     <TextView
@@ -77,15 +77,15 @@
                 android:id="@+id/iv_cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@android:drawable/ic_menu_close_clear_cancel"
-                android:tint="@color/red" />
+                app:srcCompat="@drawable/ic_close"/>
+
         </LinearLayout>
 
         <ListView
             android:id="@+id/lv_options"
             android:layout_width="match_parent"
             android:paddingLeft="32dp"
-            android:layout_height="200dp" />
+            android:layout_height="180dp" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
