--- a/collect_app/src/main/res/layouts/odk/layout/activity_sync.xml
+++ b/collect_app/src/main/res/layouts/odk/layout/activity_sync.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -21,15 +20,15 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:padding="8dp"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/activity_download_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:layout_above="@+id/button_wrapper"
-            android:layout_marginBottom="48dp"/>
+            android:layout_marginBottom="40dp"/>
 
 
         <Button
