--- a/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
@@ -39,21 +39,44 @@
                 android:text="Loading please wait"
                 android:textColor="@color/secondaryColor"
                 android:textSize="16sp" />
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/cv_resync"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/primaryColor"
+                app:cardCornerRadius="8dp"
+                android:layout_marginTop="16dp"
+                app:cardUseCompatPadding="true"
+                app:contentPadding="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@color/primaryColor"
+                    android:text="Sync project again"
+                    android:textColor="@android:color/white" />
+
+
+            </android.support.v7.widget.CardView>
+
+
         </LinearLayout>
 
         <TextView
             android:id="@+id/tv_sync_project"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
             android:layout_alignParentBottom="true"
-            android:drawableRight="@drawable/ic_keyboard_arrow_right_24dp"
-            android:text="Sync Projects"
-            android:visibility="gone"
             android:background="@color/primaryColor"
+            android:drawableRight="@drawable/ic_keyboard_arrow_right_24dp"
             android:gravity="end|center_vertical"
+            android:padding="8dp"
+            android:text="Sync Projects"
             android:textAppearance="@style/TextAppearance.MaterialComponents.SyncProjectsSubtitle"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:visibility="gone" />
 
     </RelativeLayout>
 </LinearLayout>
