minor ui fixes with search toolbat

--- a/collect_app/src/main/res/layouts/fieldsight/layout/include_toolbar_search.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/include_toolbar_search.xml
@@ -19,6 +19,7 @@
             android:id="@+id/img_tool_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:tint="#212121"
             app:srcCompat="@drawable/ic_navigate_back" />
 
         <EditText
@@ -38,7 +39,7 @@
             android:id="@+id/img_tool_mic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_close_white_24dp"
+            app:srcCompat="@drawable/ic_action_backspace"
             android:tint="@color/gray600" />
     </LinearLayout>
 
