--- a/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
@@ -16,6 +16,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_projectlist"
             android:layout_width="match_parent"
+            android:layout_marginBottom="48dp"
             android:layout_height="wrap_content" />
 
         <LinearLayout
