--- a/collect_app/src/main/res/layouts/fieldsight/layout/site_list_item.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/site_list_item.xml
@@ -8,14 +8,14 @@
     app:cardCornerRadius="@dimen/corner_radius"
     app:cardUseCompatPadding="true">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/root_layout_message_list_row"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_list_row"
         android:clickable="true"
         android:focusable="true"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:paddingLeft="@dimen/padding_list_row"
         android:paddingTop="@dimen/padding_list_row"
         android:paddingRight="@dimen/padding_list_row"
@@ -23,14 +23,13 @@
 
         <include layout="@layout/item_text_circle" />
 
-
         <LinearLayout
             android:id="@+id/message_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingLeft="72dp"
-            android:paddingRight="@dimen/padding_list_row">
+            android:paddingRight="@dimen/padding_list_row"
+            android:paddingEnd="@dimen/padding_list_row">
 
             <TextView
                 android:id="@+id/tv_site_name"
@@ -88,5 +87,5 @@
             android:visibility="gone"
             app:srcCompat="@drawable/ic_stars" />
 
-    </RelativeLayout>
+    </LinearLayout>
 </android.support.v7.widget.CardView>
