--- a/collect_app/src/main/res/layouts/fieldsight/layout/activity_image_viewer.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/activity_image_viewer.xml
@@ -6,6 +6,22 @@
     android:background="@color/black"
     tools:context="org.bcss.collect.naxa.sitedocuments.ImageViewerActivity">
 
+    <android.support.design.widget.AppBarLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/black"
+            android:theme="@style/ToolBarWithNavigationCloseBlack"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
 
     <include layout="@layout/content_image_viewer" />
 
