--- a/collect_app/src/main/res/layouts/fieldsight/layout/content_image_viewer.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/content_image_viewer.xml
@@ -9,7 +9,7 @@
     tools:showIn="@layout/activity_image_viewer">
 
 
-    <ImageView
+    <org.bcss.collect.naxa.common.TouchImageView
         android:id="@+id/iv_image_viewer"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
