--- a/collect_app/src/main/res/layouts/fieldsight/layout/activity_site_documents_list.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/activity_site_documents_list.xml
@@ -7,7 +7,7 @@
 
     <include layout="@layout/general_toolbar" />
 
-    <org.bcss.collect.naxa.common.RecyclerViewEmptySupport
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_site_documents"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
