--- a/collect_app/src/main/res/layouts/fieldsight/layout/empty_layout.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/empty_layout.xml
@@ -37,6 +37,7 @@
         tools:text="Once you are assigned to a site, you'll see them listed here" />
 
     <Button
+        android:visibility="gone"
         android:id="@+id/btn_retry"
         style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="wrap_content"
