empty layout added

--- a/collect_app/src/main/res/layouts/fieldsight/layout/activity_notificaiton_list.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/activity_notificaiton_list.xml
@@ -22,14 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <TextView
-                android:id="@+id/tv_nodata"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="No notification available"
-                android:textColor="#212121"
-                android:visibility="gone" />
+           <include layout="@layout/empty_layout"/>
 
         </RelativeLayout>
 
