--- a/collect_app/src/main/res/layouts/fieldsight/layout/activity_report.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/activity_report.xml
@@ -2,10 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
     android:orientation="vertical">
+    <include layout="@layout/general_toolbar"/>
 
-
+    <ScrollView android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="8dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,16 +27,17 @@
             android:background="@color/black_160"
             android:gravity="center_vertical"
             android:paddingLeft="8dp"
-            android:text="Device Id"
+            android:text="@string/device_id"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_device_id"
-            android:layout_width="120dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:text="1212323"
+            android:text="0"
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -47,16 +55,17 @@
             android:background="@color/black_160"
             android:gravity="center_vertical"
             android:paddingLeft="8dp"
-            android:text="fcm Token"
+            android:text="@string/firebase_token"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_fcm_token"
-            android:layout_width="120dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:text="wererrewrq232sdsd"
+            android:text=""
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -74,16 +83,17 @@
             android:background="@color/black_160"
             android:gravity="center_vertical"
             android:paddingLeft="8dp"
-            android:text="App Version"
+            android:text="@string/app_version"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_app_version"
-            android:layout_width="120dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:text="v1.0.1-beta"
+            android:text=""
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -101,16 +111,17 @@
             android:background="@color/black_160"
             android:gravity="center_vertical"
             android:paddingLeft="8dp"
-            android:text="Device Id"
+            android:text="@string/android_os_version"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_os_version"
-            android:layout_width="120dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:text="Android O"
+            android:text=""
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -128,16 +139,17 @@
             android:background="@color/black_160"
             android:gravity="center_vertical"
             android:paddingLeft="8dp"
-            android:text="Latitude"
+            android:text="@string/latitude"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_lat"
-            android:layout_width="120dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:text="1212323"
+            android:text="0"
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -155,16 +167,17 @@
             android:background="@color/black_160"
             android:gravity="center_vertical"
             android:paddingLeft="8dp"
-            android:text="Longitude"
+            android:text="@string/longitude"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_lng"
-            android:layout_width="120dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:text="1212323"
+            android:text="0"
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -182,13 +195,14 @@
             android:background="@color/black_160"
             android:gravity="center_vertical"
             android:paddingLeft="8dp"
-            android:text="Error type"
+            android:text="@string/error_type"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
         <Spinner
             android:id="@+id/spnr_type"
-            android:layout_width="120dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:entries="@array/bug_type"
@@ -209,16 +223,16 @@
             android:background="@color/black_160"
             android:gravity="center_vertical"
             android:paddingLeft="8dp"
-            android:text="Device Name"
+            android:text="@string/device_name"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
-        <EditText
-            android:id="@+id/et_device_name"
-            android:layout_width="120dp"
+        <TextView
+            android:id="@+id/tv_device_name"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:hint="SAMSUNG"
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -226,7 +240,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Report Description"
+        android:text="@string/report_message"
         android:textColor="#212121"
         android:textSize="16sp" />
 
@@ -243,7 +257,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="I agree to send my shown data to the server for the debugging purpose" />
+        android:text="@string/report_agree" />
 
     <Button
         android:id="@+id/btn_report"
@@ -251,5 +265,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_gravity="center_horizontal"
-        android:text="Report bug" />
+        android:text="@string/report_bug" />
+</LinearLayout>
+    </ScrollView>
 </LinearLayout>
