--- a/collect_app/src/main/res/layouts/fieldsight/layout/activity_report.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/activity_report.xml
@@ -249,7 +249,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:minLines="4" />
+        android:focusable="false"/>
 
 
     <CheckBox
