hint added in the report message page

--- a/collect_app/src/main/res/layouts/fieldsight/layout/activity_report.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/activity_report.xml
@@ -247,6 +247,7 @@
     <EditText
         android:id="@+id/edt_message"
         android:layout_width="match_parent"
+        android:hint="@string/add_your_message"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:focusable="false"/>
