--- a/collect_app/src/main/res/layouts/fieldsight/layout/empty_layout.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/empty_layout.xml
@@ -9,6 +9,7 @@
 
 
     <ProgressBar
+        android:id="@+id/prgbar"
         android:layout_width="@dimen/icon_width_height"
         android:layout_height="@dimen/icon_width_height"
         android:layout_centerInParent="true"
