--- a/collect_app/src/main/res/layouts/fieldsight/layout/empty_layout.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/empty_layout.xml
@@ -12,10 +12,12 @@
         android:id="@+id/prgbar"
         android:layout_width="@dimen/icon_width_height"
         android:layout_height="@dimen/icon_width_height"
-        android:layout_centerInParent="true"
+        android:layout_above="@+id/tv_nothing"
+        android:layout_centerHorizontal="true"
         android:visibility="gone" />
 
     <TextView
+        android:id="@+id/tv_nothing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/msg"
