terms and label added

--- a/collect_app/src/main/res/layouts/fieldsight/layout/navigation_header.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/navigation_header.xml
@@ -2,27 +2,21 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/nav_header_root_layout"
     android:layout_width="match_parent"
-    android:layout_height="220dp"
->
+    android:layout_height="220dp">
 
     <RelativeLayout
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorTransparentBlueTop">
-
-
+        android:background="@color/colorTransparentBlueTop"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?selectableItemBackground">
 
         <ImageView
-
-            android:scaleType="centerCrop"
-            android:src="@drawable/user_profile_background"
             android:layout_width="match_parent"
-            android:layout_height="250dp" />
-
-
+            android:layout_height="250dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/user_profile_background" />
 
         <ImageView
             android:id="@+id/image_profile"
@@ -43,7 +37,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/post"
+            android:id="@+id/tv_user_post"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_user_name"
@@ -56,11 +50,11 @@
             android:id="@+id/tv_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/post"
+            android:layout_below="@id/tv_user_post"
             android:layout_centerHorizontal="true"
             android:textColor="@color/white"
             android:textSize="@dimen/text_size_extra_small" />
-        
+
 
     </RelativeLayout>
 
