--- a/collect_app/src/main/res/layouts/fieldsight/layout/create_site_form.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/create_site_form.xml
@@ -21,7 +21,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Site Identifier"
+            android:hint="Identifier"
             android:inputType="text"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
     </android.support.design.widget.TextInputLayout>
@@ -37,7 +37,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Site name"
+            android:hint="name"
             android:inputType="text"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
     </android.support.design.widget.TextInputLayout>
@@ -53,7 +53,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Site Phone Number"
+            android:hint="Phone Number"
             android:inputType="phone"
             android:maxLines="1"
             android:minLines="1"
@@ -71,7 +71,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Site Address"
+            android:hint="Address"
             android:inputType="text"
             android:maxLines="3"
             android:minLines="1"
@@ -89,7 +89,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Site Public Description"
+            android:hint="Public Description"
             android:inputType="text"
             android:maxLines="5"
             android:minLines="1"
@@ -98,7 +98,6 @@
 
     <Spinner
         android:id="@+id/spinnerSiteType"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_large"
@@ -107,7 +106,6 @@
 
     <Spinner
         android:id="@+id/spinnerSiteCluster"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_large"
