--- a/collect_app/src/main/res/layouts/fieldsight/layout/row_sync_all.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/row_sync_all.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     app:cardUseCompatPadding="true"
     app:contentPadding="8dp"
     android:layout_height="wrap_content">
@@ -33,7 +34,7 @@
                     android:id="@+id/tv_project_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="STFC - NUWAKOT"
+                    tools:text="STFC - NUWAKOT"
                     android:textColor="#212121"
                     android:textSize="18sp" />
 
@@ -47,7 +48,7 @@
                         android:id="@+id/tv_project_other"
                         android:layout_width="120dp"
                         android:layout_height="wrap_content"
-                        android:text="by build change"
+                        tools:text="by build change"
                         android:textColor="#727272"
                         android:textSize="16sp" />
 
@@ -56,16 +57,18 @@
                         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                         android:layout_width="100dp"
                         android:layout_marginLeft="8dp"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp" />
 
                     <TextView
                         android:id="@+id/tv_project_progress_percentage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="50%"
+                        tools:text="50%"
                         android:layout_marginLeft="4dp"
                         android:textColor="#727272"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        android:layout_marginStart="4dp" />
 
                 </LinearLayout>
 
@@ -82,10 +85,12 @@
         </LinearLayout>
 
         <ListView
+            android:scrollbars="none"
             android:id="@+id/lv_options"
             android:layout_width="match_parent"
             android:paddingLeft="32dp"
-            android:layout_height="180dp" />
+            android:layout_height="200dp"
+            android:paddingStart="32dp" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
