--- a/collect_app/src/main/res/layouts/fieldsight/layout/row_text_checkbox.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/row_text_checkbox.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
@@ -12,10 +13,10 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="1"
-        android:padding="8dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="8dp">
 
         <TextView
             android:id="@+id/tv_name"
@@ -35,5 +36,12 @@
             android:textSize="12sp" />
 
     </LinearLayout>
+
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/btn_retry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/padding_extra_large"
+        app:srcCompat="@drawable/ic_refresh_black" />
 
 </LinearLayout>
