[#282] single async task downloads form from multiple url

--- a/collect_app/src/main/res/layouts/fieldsight/layout/row_text_checkbox.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/row_text_checkbox.xml
@@ -37,7 +37,11 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.AppCompatImageView
+    <TextView
+        android:background="?selectableItemBackground"
+        android:textColor="@color/green"
+        android:textAllCaps="true"
+        android:text="@string/action_retry"
         android:id="@+id/btn_retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
