--- a/collect_app/src/main/res/layouts/odk/layout/remote_file_manage_list.xml
+++ b/collect_app/src/main/res/layouts/odk/layout/remote_file_manage_list.xml
@@ -17,6 +17,7 @@ the License.
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <!-- Toolbar -->
     <include layout="@layout/toolbar" />
 
@@ -34,14 +35,14 @@ the License.
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_above="@+id/buttonholder">
+            android:layout_above="@+id/buttonholder"
+            android:orientation="vertical">
 
             <ListView
                 android:id="@android:id/list"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@android:id/empty"
@@ -90,4 +91,8 @@ the License.
         </LinearLayout>
     </RelativeLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white" />
 </RelativeLayout>
