subsitelist optimized in dialog

--- a/collect_app/src/main/res/layouts/fieldsight/layout/sub_site_list_item.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/sub_site_list_item.xml
@@ -1,25 +1,17 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout_message_list_row"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
-    android:clickable="true"
-    android:focusable="true"
-    android:orientation="horizontal"
-    android:padding="@dimen/padding_large"
-    android:layout_margin="@dimen/margin_small"
-   >
+    android:gravity="center_vertical"
+    android:padding="@dimen/padding_large">
 
     <RelativeLayout
         android:id="@+id/icon_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_large"
-        android:layout_marginRight="@dimen/margin_large"
-        android:fillAfter="false"
-        android:fillEnabled="false">
+        android:layout_marginRight="@dimen/margin_large">
 
         <ImageView
             android:id="@+id/icon_profile"
@@ -28,40 +20,23 @@
             android:background="@drawable/circle_blue" />
 
         <TextView
-
             android:id="@+id/icon_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textColor="@android:color/white"
-
             android:textSize="@dimen/text_size_medium"
             tools:text="N" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/message_container"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/tv_site_name"
+        style="@style/TextAppearance.AppCompat.Body1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
-        android:layout_toEndOf="@id/icon_container"
-        android:layout_toRightOf="@id/icon_container"
-
-        android:orientation="vertical">
-
-        <TextView
-            android:textSize="@dimen/msg_text_primary"
-            android:id="@+id/tv_site_name"
-            style="@style/TextAppearance.AppCompat.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:lines="1"
-            android:textStyle="normal"
-            tools:text="Narayan Primary School" />
-
-
-    </LinearLayout>
-
-    </RelativeLayout>
+        android:ellipsize="end"
+        android:lines="1"
+        android:textSize="@dimen/msg_text_primary"
+        android:textStyle="normal"
+        tools:text="Narayan Primary School" />
+</LinearLayout>
