--- a/collect_app/src/main/res/layouts/fieldsight/layout/sub_site_list_item.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/sub_site_list_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
+    android:layout_marginLeft="20dp"
     android:padding="@dimen/padding_large">
 
     <RelativeLayout
@@ -20,7 +21,7 @@
             android:background="@drawable/circle_blue" />
 
         <TextView
-            android:id="@+id/icon_text"
+            android:id="@+id/tv_icon_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -29,14 +30,36 @@
             tools:text="N" />
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/tv_site_name"
-        style="@style/TextAppearance.AppCompat.Body1"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:lines="1"
-        android:textSize="@dimen/msg_text_primary"
-        android:textStyle="normal"
-        tools:text="Narayan Primary School" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_sub_site_name"
+            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:lines="1"
+            android:textSize="@dimen/msg_text_primary"
+            android:textStyle="normal"
+            tools:text="Narayan Primary School" />
+
+        <TextView
+            android:id="@+id/tv_sub_site_identifier"
+            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:layout_marginLeft="8dp"
+            android:lines="1"
+            android:textColor="#727272"
+            android:textSize="@dimen/text_size_medium_small"
+            android:textStyle="normal"
+            tools:text="Site identifier" />
+    </LinearLayout>
+
+
 </LinearLayout>
