--- a/collect_app/src/main/res/values/dimens.xml
+++ b/collect_app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <!-- fontSize -->
     <dimen name="text_size_extra_small">12sp</dimen>
     <dimen name="text_size_small">16sp</dimen>
+    <dimen name="text_size_medium_small">14sp</dimen>
     <dimen name="text_size_medium">20sp</dimen>
     <dimen name="text_size_large">24sp</dimen>
     <dimen name="text_size_extra_large">28sp</dimen>
