--- a/collect_app/src/main/res/layout/form_chooser_list_item_multiple_choice.xml
+++ b/collect_app/src/main/res/layout/form_chooser_list_item_multiple_choice.xml
@@ -6,7 +6,7 @@ Unless required by applicable law or agreed to in writing, software distributed
 under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
 OR CONDITIONS OF ANY KIND, either express or implied. See the License for
 the specific language governing permissions and limitations under the License. -->
-<org.odk.collect.android.views.TwoItemMultipleChoiceView
+<org.bcss.collect.android.views.TwoItemMultipleChoiceView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="horizontal"
@@ -38,4 +38,4 @@ the specific language governing permissions and limitations under the License. -
             android:visibility="gone"
             app:srcCompat="@drawable/ic_cancel"/>
 
-</org.odk.collect.android.views.TwoItemMultipleChoiceView>
+</org.bcss.collect.android.views.TwoItemMultipleChoiceView>
