--- a/collect_app/src/main/res/layouts/fieldsight/layout/site_list_item.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/site_list_item.xml
@@ -70,11 +70,12 @@
             android:id="@+id/timestamp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_gravity=""
             android:textColor="@color/colorAccent"
             android:textSize="@dimen/timestamp"
             android:textStyle="bold"
-            tools:text="Offline Site" />
+            tools:text="Offline Site"
+            />
 
         <ImageView
             android:id="@+id/icon_star"
