[#328] used androidX card view instead of support v7

--- a/collect_app/src/main/res/layouts/fieldsight/layout/activity_site_profile_new.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/activity_site_profile_new.xml
@@ -70,7 +70,7 @@
             tools:context=".SiteProfileActivity"
             tools:showIn="@layout/activity_site_profile">
 
-            <com.google.android.material.card.MaterialCardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/card_intro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -100,7 +100,7 @@
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-            </com.google.android.material.card.MaterialCardView>
+            </androidx.cardview.widget.CardView>
 
             <com.google.android.material.card.MaterialCardView
 
