--- a/collect_app/src/main/res/values/untranslated.xml
+++ b/collect_app/src/main/res/values/untranslated.xml
@@ -25,4 +25,7 @@ the specific language governing permissions and limitations under the License. -
     <string name="every_24_hours_value" translatable="false">every_24_hours</string>
     <string name="app_theme_light" translatable="false">light_theme</string>
     <string name="app_theme_dark" translatable="false">dark_theme</string>
+
+    <string name="authority_forms" translatable="false">org.odk.collect.android.provider.forms</string>
+    <string name="authority_instance" translatable="false">org.odk.collect.android.provider.instances</string>
 </resources>
