--- a/collect_app/src/main/res/layouts/fieldsight/layout/row_text_checkbox.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/row_text_checkbox.xml
@@ -21,7 +21,7 @@
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:textColor="#212121"
             android:textSize="14sp" />
