--- a/collect_app/src/main/res/layouts/fieldsight/layout/row_text_checkbox_v2.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/row_text_checkbox_v2.xml
@@ -19,6 +19,7 @@
 
 
     <ProgressBar
+        android:id="@+id/progress_bar_row_text_checkbox_v2"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
