--- a/collect_app/src/main/res/layouts/fieldsight/layout/fragment_dashboard_site.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/fragment_dashboard_site.xml
@@ -343,7 +343,6 @@
         </android.support.v7.widget.CardView>
 
         <LinearLayout
-            android:weightSum="2"
             android:id="@+id/buttonholder"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -353,23 +352,37 @@
             android:layout_marginTop="@dimen/margin_medium"
             android:layout_marginEnd="@dimen/margin_medium"
             android:layout_marginRight="@dimen/margin_medium"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="2">
 
 
             <Button
-                android:textAllCaps="true"
-                android:drawableStart="@drawable/ic_cloud_upload_legacy"
-                android:drawableLeft="@drawable/ic_cloud_upload_legacy"
-                android:text="@string/upload"
                 android:id="@+id/site_option_btn_upload_site"
                 style="@style/Base.Widget.AppCompat.Button.Colored"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:drawableStart="@drawable/ic_cloud_upload_legacy"
+                android:drawableLeft="@drawable/ic_cloud_upload_legacy"
                 android:stateListAnimator="@null"
-                android:textOff="@string/btn_text_off_not_finalized"
-                android:textOn="@string/btn_text_on_finalized"
+                android:text="@string/upload"
+                android:textAllCaps="true"
                 android:textSize="16sp" />
+
+
+            <Button
+                android:id="@+id/site_option_btn_upload_edited_site"
+                style="@style/Base.Widget.AppCompat.Button.Colored"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:drawableStart="@drawable/ic_cloud_upload_legacy"
+                android:drawableLeft="@drawable/ic_cloud_upload_legacy"
+                android:stateListAnimator="@null"
+                android:text="@string/upload"
+                android:textAllCaps="true"
+                android:textSize="16sp"
+                android:visibility="gone" />
 
             <ToggleButton
                 android:id="@+id/site_option_btn_finalize_site"
