Only downloads non exisiting forms (#366)

--- a/collect_app/src/main/res/layouts/odk/layout/activity_sync.xml
+++ b/collect_app/src/main/res/layouts/odk/layout/activity_sync.xml
@@ -12,11 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/no_internet_body"
-        android:visibility="gone"
         android:background="@color/yellow"
+        android:text="@string/no_internet_body"
         android:textAlignment="center"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:visibility="gone" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -26,9 +26,10 @@
             android:id="@+id/activity_download_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/download_button"
+            android:layout_alignParentTop="true"
             android:layout_margin="8dp"
-            android:layout_above="@+id/button_wrapper"
-            android:layout_marginBottom="40dp"/>
+            android:layout_marginBottom="40dp" />
 
 
         <Button
