--- a/collect_app/src/main/res/layouts/fieldsight/layout/list_item_fieldsight_form.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/list_item_fieldsight_form.xml
@@ -7,7 +7,11 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/margin_small"
     android:layout_marginRight="@dimen/margin_small"
-    android:background="@android:color/white"
+    app:cardUseCompatPadding="true"
+    android:stateListAnimator="@animator/lift_on_touch"
+
+
+    android:foreground="?selectableItemBackground"
     app:cardCornerRadius="@dimen/corner_radius"
     app:cardElevation="@dimen/elevation_card_resting">
 
