--- a/collect_app/src/main/res/values/untranslated.xml
+++ b/collect_app/src/main/res/values/untranslated.xml
@@ -34,6 +34,6 @@ the specific language governing permissions and limitations under the License. -
     <string name="basemap_source_stamen" translatable="false">Stamen</string>
     <string name="basemap_source_carto" translatable="false">Carto</string>
 
-    <string name="authority_forms" translatable="false">org.odk.collect.android.provider.forms</string>
-    <string name="authority_instance" translatable="false">org.odk.collect.android.provider.instances</string>
+    <string name="authority_forms" translatable="false">org.bcss.collect.android.provider.forms</string>
+    <string name="authority_instance" translatable="false">org.bcss.collect.android.provider.instances</string>
 </resources>
