--- a/collect_app/src/main/res/menu/form_menu.xml
+++ b/collect_app/src/main/res/menu/form_menu.xml
@@ -18,11 +18,13 @@
         android:icon="@drawable/ic_save"
         android:title="@string/save_all_answers"
         app:showAsAction="always"
+        app:iconTint="@android:color/white"
         tools:ignore="AlwaysShowAction" />
 
     <item
         android:id="@+id/menu_goto"
         android:icon="@drawable/ic_menu_goto"
+        app:iconTint="@android:color/white"
         android:title="@string/view_hierarchy"
         app:showAsAction="always" />
 
