--- a/collect_app/src/main/res/layouts/fieldsight/layout/activty_flag_response.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/activty_flag_response.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/root_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
