changed style colors; bumped to 3.2.8

--- a/collect_app/src/main/res/layouts/odk/layout/toolbar_without_progressbar.xml
+++ b/collect_app/src/main/res/layouts/odk/layout/toolbar_without_progressbar.xml
@@ -4,7 +4,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="?attr/colorPrimary"
+    android:background="@drawable/toolbar_gradient"
     android:minHeight="?attr/actionBarSize"
     app:contentInsetEnd="0dp"
     app:contentInsetStart="0dp"
